[project]
name = "recall"
version = "0.0.1"
authors = [
  { name="Thomas Cole", email="thomaswcole1@gmail.com" },
]
description = "A package to retrieve NTHSA recall data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
